This is the 1.4 pre-release. The new features compared to genext2fs 1.3 are:

- long options support
- support for SI and IEC binary-multiple prefixes for some option values
- --faketime option
- more capable device table format, compatible with that of mkfs.jffs2
- hardlink support
- socket support
- big filesystems (>8MB) support
- Solaris 2.x and Mac OS X support

There are also various bugfixes and an up-to-date manpage.

IMPORTANT: in order to be more consistent with mkfs.jffs2 and mkfs.ext2,
some option letters have changed: -D replaces the old -f, -N replaces the
old -i and -m replaces the old -r. Also, this version of genext2fs no
longer supports the old devices table format. See the man page for more
information.

Please report bugs to genext2fs-devel@lists.sourceforge.net